--- a/app/refinance/lender-preferences/LenderPreferences.css
+++ b/app/refinance/lender-preferences/LenderPreferences.css
@@ -1,5 +1,5 @@
 .loan-preference-form-container {
-  background-color: rgba(18, 19, 26, 0.479);
+  background-color: rgb(134 138 167 / 48%);
   height: 70vh;
   padding: 10px;
   margin-top: 25px;
@@ -16,4 +16,15 @@
 
 .form-check-input {
   font-size: 1.4rem;
+}
+
+@media (max-width: 768px) {
+  .loan-preference-form-container {
+    height: 100vh;
+  }
+
+  .btn-submit {
+    font-size: 1rem;
+    padding: 1rem;
+  }
 }
